# ouroboros-sql

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/golden/: LICENSE  holdout.json  manifest.json  train.json  val.json
data/memory/: strategy_memory.json
docs/results/ablation-val-memory-v1/: metadata.json  metrics.json  results.md
docs/results/baseline-val-v0/: analysis.md  metadata.json  (+3 more)
iterations/01/: analysis.json  clamp_notes.json  decision.json  diff_memory.patch  diff_prompt_orchestrator.patch  diff_prompt_schema_linker.patch  diff_prompt_sql_writer.patch  diff_prompt_validator.patch  patchset.json  report.json  val_metrics.json
iterations/02/: analysis.json  clamp_notes.json  decision.json  diff_memory.patch  diff_prompt_schema_linker.patch  diff_prompt_sql_writer.patch  diff_prompt_summarizer.patch  diff_prompt_validator.patch  memory_after.json  patchset.json  report.json  val_metrics.json
iterations/03/: analysis.json  decision.json  diff_memory.patch  diff_prompt_sql_writer.patch  diff_prompt_validator.patch  patchset.json  report.json  val_metrics.json
scripts/: build_golden_set.py  download_data.py  make_learning_curve.py  seed_memory.py
src/ouroboros_sql/: __init__.py  bootstrap.py  cli.py  config.py  data_setup.py  golden_builder.py  models.py  runner.py
tests/: conftest.py  fake_model.py  test_db.py  test_executor.py  test_golden_set.py  test_harness.py  test_loop.py  test_memory.py  test_memory_wiring.py  test_metrics.py  test_models.py  test_patches.py  test_prompt_loader.py  test_report.py  test_taxonomy.py  test_topology.py
(+31 files in other folders)
